# langtut

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.toml.example  DEVELOPMENT.md  Dockerfile  LISTENING_MODE_PLAN.md  PROPERTIES_ROLLOUT.md  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_VOLUME_FIX.md  README.md  SETUP_CONSOLIDATION_PLAN.md  TTS_SETUP.md  WINDOWS_SETUP.md  app.py  db_utils.py  init_db.py  pyproject.toml  railway.toml  requirements.txt  run.py  run_windows.bat  settings.toml  simple_app.py  simple_complete_app.py  startup_check.py  test_precommit.py
app/: __init__.py  config.py  database.py  gsheet.py  logging.py  models.py  session_manager.py  utils.py
app/routes/: admin.py  auth.py  index.py  learn.py  review.py  settings.py  test.py
app/routes/api/: __init__.py  cards.py  language.py  tts.py
app/services/: auth_manager.py  tts.py
app/services/learning/: card_session.py  learn_service.py  mode_config.py  review_service.py  statistics.py
app/static/: sw.js
app/static/css/: components.css  feedback.css  level-dots.css  level-indicators.css  mobile.css  settings.css  style.css
app/static/js/: card.js  feedback.js  listening.js  modes.js  tts.js
app/templates/: base.html  card.html  feedback.html  login.html  results.html  settings.html  test_tts.html
config/: languages.yaml
data/: .gitkeep
docs/: README.md  architecture.md  audio.md  auth.md  backend-cleanup.md  development-guide.md  frontend-state-management.md  improve_audio.md  listening-mode.md  phase1-complete.md  quick-start.md  routes-refactoring.md  templates-refactoring.md  tts-system.md  windows-setup-guide.md
misc/: parse_frequency_dict.py  tts.py
scripts/: frequency_dict.json
src/: __init__.py  auth.py  config.py  database.py  gsheet.py  logging.py  models.py  request_logger.py  routes.py  routes_original_backup.py  session_manager.py  spreadsheet_manager.py  tts_service.py  user_manager.py  utils.py
src/routes/: __init__.py  admin.py  api.py  auth.py  flashcard.py  index.py  learn.py  review.py  settings.py  test.py
src/routes/api/: cards.py  language.py  tts.py
src/services/: auth.py  auth_manager.py  tts.py
src/services/learning/: __init__.py  card_session.py  learn_service.py  review_service.py  statistics.py
static/: manifest.json  sw.js
static/css/: buttons.css  components.css  feedback.css  level-dots.css  mobile.css  settings.css  style.css
static/js/: card.js  index.js  listening.js  mobile.js  tts.js
templates/: base.html  card.html  error.html  feedback.html  index.html  login.html  offline.html  results.html  settings.html  setup.html  test_tts.html
tests/: __init__.py  conftest.py  test_card_session.py  test_routes.py  test_statistics.py
tests/services/learning/: __init__.py  test_learn_service.py
