[tool.poetry]
name = "langtut"
version = "0.1.0"
description = ""
authors = ["Vlad Goenko <vladislav@offerfit.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.166.0"
pydantic = "^2.11.3"
flask-cors = "^5.0.1"
gspread = "^6.2.0"
oauth2client = "^4.1.3"
dynaconf = "^3.2.10"
openai = "^1.77.0"
python-dotenv = "^1.1.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.0"
flask-sqlalchemy = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
